--- a/example_data/todo.txt
+++ b/example_data/todo.txt
@@ -24,3 +24,4 @@ NEXT
  - Add datetime field for the sake of future database comparison query
 
  - เติมเงิน pages
+   - this might take until Friday
