--- a/example_data/todo.txt
+++ b/example_data/todo.txt
@@ -27,3 +27,13 @@ NEXT
    - this might take until Friday
 
  - handle TRUE case in รายเดือน in case of increased plan, right now current plan input system cannot detect additional stuffs [done]
+
+
+
+==========================
+
+https://shp.ee/fhjha6x
+https://shp.ee/wwi9cxw
+https://shp.ee/pia6iiv
+
+Handle Language select at first
