--- a/example_data/todo.txt
+++ b/example_data/todo.txt
@@ -1,8 +1,8 @@
-postpaid (monthly, system 0)
+postpaid (monthly, system 0, due end of 2023)
 
 - new field "package" (AIS only, the rest same as "plan")
 - FUP for มหามงคล via collect link and visit each
 
-boardband (system 2)
+boardband (เน็ตบ้าน, system 2, not in a hurry, can be done later, start of 2024)
 
 - translate excel format output as Python code process as usual
