--- a/example_data/todo.txt
+++ b/example_data/todo.txt
@@ -1,5 +1,5 @@
--add url field in all 3 types as last field
+-add url field in all 3 types as last field [[done]]
 -more boardband stuffs urls
 -"system" field name into "service_type" [[done]]
 -"service_type" --> postpaid [2] and prepaid [1] switch number ids (1 and 2) [[done]]
--Boolean fields fix and not conflict with 1 or 0
+-Boolean fields fix and not conflict with 1 or 0 [[done]]
